# f5-cord

./: .gitignore  .travis.yml  CMakeLists.txt  ChangeLog  DESIGN.md  README.md  runtests
.circleci/: CMakeLists.txt  config.yml
examples/: CMakeLists.txt  wordlist.cpp
include/f5/: control.hpp  detect.hpp  memory.hpp  memory.md  raise.hpp
include/f5/cord/: iostream.hpp  lstring.hpp  tstring.hpp  unicode-core.hpp  unicode-encodings.hpp  unicode-iterators.hpp  unicode-shared_string.hpp  unicode-string.hpp  unicode-view.hpp  unicode.hpp  unicode.md  vstring.hpp
test/: CMakeLists.txt
test/compile/: .gitignore  CMakeLists.txt  lstring-compare.cpp  lstring.cpp  memory.cpp  tstring.cpp  u16view.cpp  u32view.cpp  u8view.cpp  unicode.cpp
test/fuzz/: CMakeLists.txt  u8loader.cpp
test/headers/: .gitignore  CMakeLists.txt  unicode-shared_string.cpp
test/run/: .gitignore  CMakeLists.txt  assert.hpp  lstring-compare.cpp  lstring-std_string.cpp  memory.cpp  unicode-check_valid.cpp  unicode-encoding.cpp  unicode-shared_string.cpp  unicode-string.cpp  unicode-u16string.cpp  unicode-u32string.cpp  unicode-u8string.cpp  unicode-view.cpp
