function(runtest name)
    add_executable(${name} ${name}.cpp)
    target_link_libraries(${name} f5-cord)
    add_custom_command(TARGET ${name} POST_BUILD COMMAND ${name})
endfunction(runtest)

runtest(lstring-compare)
runtest(lstring-std_string)
runtest(memory)
runtest(unicode-check_valid)
runtest(unicode-encoding)
runtest(unicode-view)
