function(runtest name)
    add_executable(${name} EXCLUDE_FROM_ALL ${name}.cpp)
    target_link_libraries(${name} f5-cord)
    add_custom_command(TARGET ${name} POST_BUILD COMMAND ${name})
    add_dependencies(check ${name})
    add_test(NAME ${name}-test COMMAND ${name})
endfunction(runtest)

runtest(lstring-compare)
runtest(lstring-std_string)
runtest(memory)
runtest(unicode-check_valid)
runtest(unicode-encoding)
runtest(unicode-view)
